--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -3,7 +3,7 @@
         <h1 class="huge center aligned ui header">
             Meteor Boilerplate
             <div class="sub header">
-                by <a class="unstyled link" href="http://matteodem.github.io/meteor-boilerplate">@matteodem</a>
+              {{> loginButtons}}
             </div>
         </h1>
         <button class="basic ui resize icon button"><i class="angle down icon"></i></button>
